# imcomp

./: .gitignore  .gitmodules  ImCompTable.py  MANIFEST.in  README.md  fill_table_data.py  imcomp.py  pyproject.toml  requirements.txt  version.py
config/: default.json
help/: imcomp_help.html
imcomp/: ImCompTable.py  ImCompWindow.py  __init__.py  fill_table_data.py  imcomp.py  imcomp_config.py  imcomp_table.py  imcomp_window.py  version.py
imcomp/help/: imcomp_help.html
imcomp/qimtools/: process_image_differences.py
qImComp/: ImCompWindow.py
utils/: process_image_differences.py
