[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "imcomp"
authors = [
  { name="Karl Krissian", email="karl.krissian@gmail.com" },
]
description = "Image visualization and comparison for multiple series of images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    # "Foundation==0.1.0a0.dev1",
    "numpy>=1.21.0",
    "opencv_python>=4.2",
    "psutil>=5.8.0",
    "qimview>=1.0.8",
]

[project.optional-dependencies]
extra = [
    "xlwt>=1.3.0",
]


[project.urls]
"Homepage" = "https://github.com/qimview/imcomp"
"Wiki" = "https://github.com/qimview/imcomp/wiki"
"Bug Tracker" = "https://github.com/qimview/imcomp/issues"

[project.scripts]
imcomp = "imcomp.imcomp:main"

[tool.setuptools.dynamic]
version = {attr = "imcomp.version.__version__"}
